--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -2,7 +2,47 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.bookmarkIndex {
-  padding: 3em;
-  background-color: burlywood;
+@font-face {
+  font-family: "commonsans";
+  src: url ('/assets/CommonSans-Regular.otf');
+}
+
+
+a {
+  text-decoration: none;
+}
+
+.red {
+  font-size: 3em;
+}
+
+.image_gallery {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 0;
+  padding-bottom: 3em;
+}
+
+.bookmark_img {
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+  background-color: #f7f7f7;
+  width: 47%;
+  margin-bottom: 1em;
+  margin-right: .5em;
+  padding: .5em;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .bookmark_img {
+    width: 100%;
+ }
 }
