--- a/app/views/websites/new.html.erb
+++ b/app/views/websites/new.html.erb
@@ -1,5 +1,6 @@
-<h1>Add New Website to your List</h1>
-<p>Find me in app/views/bookmarks/new.html.erb</p>
-
+<div class="new_bookmark_form">
+<h1>Add New Website to List</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
 <%= render :partial => 'form' %>
+</div>
