--- a/app/views/websites/explore.html.erb
+++ b/app/views/websites/explore.html.erb
@@ -4,11 +4,12 @@
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
 </section>
 
-
-<div class="image_gallery">
-<% @websites.each do |website| %>
-<div class="bookmark_img">
-  <%= link_to image_tag(website.image, :class => 'thumb', :alt => website.title), website %>
-</div>
-<% end %>
+<div class="card">
+  <div class="image_gallery">
+  <% @websites.each do |website| %>
+  <div class="bookmark_img">
+    <%= link_to image_tag(website.image, :class => 'thumb', :alt => website.title), website %>
+  </div>
+  <% end %>
+  </div>
 </div>
