--- a/app/views/websites/new.html.erb
+++ b/app/views/websites/new.html.erb
@@ -1,6 +1,6 @@
 <div class="new_bookmark_form">
-<h1>Add New Website to List</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+<h1>Add New Bookmark</h1>
+<p>Found a nice website? Add it to your bookmarks below.</p>
 
 <%= render :partial => 'form' %>
 </div>
