--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,10 +26,10 @@ body {
 }
 
 body.new {
-    background: url(/assets/bg.jpg);
+    background: url(http://res.cloudinary.com/josephmichael/image/upload/v1522929956/bg7.jpg);
     background-size: cover;
     height: 100vh;
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
 }
 
@@ -96,3 +96,17 @@ main {
     color: white;
     background: black;
   }
+
+.signup_container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+
+}
+
+.signup_form {
+background-color:white;
+padding: 2em;
+}
