--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<div class="signup_container">
+<div class="signup_form">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -25,5 +27,6 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
+</div>
+</div>
 <!-- <%= render "devise/shared/links" %>
