--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -71,7 +71,13 @@ main {
   display: inline-block;
   margin: 0 auto;
   padding: 5em;
+  padding-top: 2em;
   background: white;
+}
+
+.signin_box h2 {
+  text-align: center;
+  margin-bottom: 2em;
 }
 
 
