--- a/app/assets/stylesheets/websites.scss
+++ b/app/assets/stylesheets/websites.scss
@@ -40,8 +40,15 @@
 
  input[type=submit] {
    border: 2px solid black;
-   padding: 2rem;
+   padding: 1.5rem;
    color: white;
    background: black;
+   font-size: 1.5em;
+ }
+
+ input[type="submit"]:hover {
+    color: black;
+    background: white;
+    border: 2px solid black;
  }
 }
