changed button routes

--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,7 +1,7 @@
 
 <section class="userHeader">
   <h2 class="red">My Bookmarks.</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
+  <p>Scroll your current bookmarks. consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
 </section>
 
 
