--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -104,11 +104,26 @@ main {
   }
 
 .signup_container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100vw;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: inline-block;
+      margin: 0 auto;
+      padding: 5em;
+      padding-top: 2em;
+      background: white;
+}
+
+@media (max-width: 1000px) {
+
+  .signup_container {
+    position:relative;
+    width: 100%;
+    top: 0;
+    left: 0;
+    transform: translate(0);
+  }
 
 }
 
