updated copy delete lorem

--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,7 +1,7 @@
 
 <section class="userHeader">
   <h2 class="red">My Bookmarks.</h2>
-  <p>Scroll your current bookmarks. consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
+  <p>Scroll your current bookmarks. A live collection of the most recently added bookmarks to your bookmarks homepage. Have a look through here to see your latest bookmarks or click the image to edit or delete a website from your bookmarks.</p>
 </section>
 
 
