--- a/app/views/websites/explore.html.erb
+++ b/app/views/websites/explore.html.erb
@@ -1,7 +1,7 @@
 
 <section class="userHeader">
   <h2 class="red">Explore The Latest Bookmarks</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
+  <p>Explore the latest bookmarks added. A live collection of the most recently added bookmarks to the website from all users. Add a website to your own collection if you see something you like! It's as easy as clicking a few buttons. Not really though cause that doesnt work yet. Anyway have a look around and have a nice day.</p>
 </section>
 
 <div class="card">
