--- a/app/assets/stylesheets/websites.scss
+++ b/app/assets/stylesheets/websites.scss
@@ -52,3 +52,19 @@
     border: 2px solid black;
  }
 }
+
+.controls {
+  a {
+    color: red;
+  }
+
+  a:hover {
+    color: black;
+    text-decoration: line-through;
+  }
+}
+
+.show-container {
+  text-align: center;
+  
+}
