--- a/app/views/websites/_form.html.erb
+++ b/app/views/websites/_form.html.erb
@@ -7,8 +7,8 @@
   <%= f.label :description %><br/>
   <%= f.text_area :description, :required => true %><br/>
 
-  <%= f.label :image %><br/>
-  <%= f.url_field :image %><br/>
+  <!-- <%= f.label :image %><br/>
+  <%= f.url_field :image %><br/> -->
 
   <%= f.label :link %><br/>
   <%= f.url_field :link %><br/>
