--- a/app/views/websites/new.html.erb
+++ b/app/views/websites/new.html.erb
@@ -1,6 +1,6 @@
 <div class="new_bookmark_form">
-<h1>Add New Bookmark</h1>
-<p>Found a nice website? Add it to your bookmarks below.</p>
+  <h1>Add New Bookmark</h1>
+  <p>Found a nice website? Just add the link below and we will automatically screenshot the website for you</p>
 
-<%= render :partial => 'form' %>
+  <%= render :partial => 'form' %>
 </div>
