--- a/app/views/websites/explore.html.erb
+++ b/app/views/websites/explore.html.erb
@@ -8,7 +8,7 @@
   <div class="image_gallery">
   <% @websites.reverse.each do |website| %>
   <div class="bookmark_img">
-    <%= link_to image_tag(website.image, :class => 'thumb', :alt => website.title), website %>
+    <%= link_to image_tag("//image.thum.io/get/width/900/crop/700/#{website.link}", :class => 'thumb', :alt => website.title), website %>
   </div>
   <% end %>
   </div>
