--- a/app/views/websites/show.html.erb
+++ b/app/views/websites/show.html.erb
@@ -3,11 +3,11 @@
 <div class="show-container">
   <h1><%= @website.title %></h1>
 
-  <% unless @website.image.blank?  %>
+  <!-- <% unless @website.image.blank?  %> -->
 
     <%= image_tag "//image.thum.io/get/width/900/crop/700/#{@website.link}", :alt => @website.title, :class => 'thumb' %>
 
-  <% end %>
+  <!-- <% end %> -->
 
   <p><%= @website.description %></p>
   <p>visit: <%= link_to @website.link, @website.link, target: :_blank, :class => 'link' %></p>
@@ -17,7 +17,7 @@
 
 
   <div class="controls">
-    <% if !current_user.websites.include?(@website) %>
+    <% if current_user.websites.include?(@website) %>
       <%= link_to 'Edit website', edit_website_path(@website), :class => '' %>
       <%= link_to 'Delete website', @website, :method => 'delete', :data => { :confirm => 'Are you sure?' } %>
 
